--- a/src/components/sections/Header.astro
+++ b/src/components/sections/Header.astro
@@ -1,55 +1,33 @@
 ---
 import { Icon } from "astro-icon/components";
 import ThemeToggle from "../ThemeToggle.astro";
-import { basic } from "../../config/cv.json";
-
-const menuItems = [
-  { name: 'About', href: '/' },
-  { name: 'Blog', href: '/blogs' }
-];
 ---
 
 <header class="bg-background py-4">
   <div class="container max-w-6xl mx-auto flex justify-between items-center px-4 md:px-8">
     <!-- Logo -->
     <div class="text-2xl font-bold">
-      <a href="/" class="hover:text-offset">{basic?.name}</a>
+      <a href="/" class="hover:text-offset">Portfolio</a>
     </div>
 
     <div class="flex gap-5">
-      <!-- PC Menu -->
-      <nav class="hidden sm:flex space-x-6 items-center">
-        {menuItems.map((item) => (
-          <a href={item.href} class="hover:text-offset">{item.name}</a>
-        ))}
+      <!-- Menu -->
+      <nav class="flex space-x-6 items-center">
+        <a href="https://www.linkedin.com/in/matiasmendaro/" title="Linkedin" target="_blank" rel="noopener noreferrer"
+            class="block transition-all duration-200 hover:text-opacity-80 focus:text-opacity-80">
+            <Icon name="icon-linkedin" size={50} />
+        </a>
+        <a href="https://github.com/matiasmendaro" title="Github" target="_blank" rel="noopener noreferrer"
+            class="block transition-all duration-200 hover:text-opacity-80 focus:text-opacity-80">
+            <Icon name="icon-github" size={50} />
+        </a>
       </nav>
-
-      <!-- Mobile Menu Button -->
-      <div class="sm:hidden flex">
-        <button id="menu-btn" class="focus:outline-none">
-          <Icon name="Menu" class="size-6"/>
-        </button>
-      </div>
 
       <ThemeToggle />
     </div>
   </div>
-
-  <!-- Mobile Menu -->
-  <div id="mobile-menu" class="hidden sm:hidden">
-    {menuItems.map((item) => (
-      <a href={item.href} class="block px-4 py-2 hover:bg-background-offset">
-        {item.name}
-      </a>
-    ))}
-  </div>
 </header>
 
 <script>
-  const menuBtn = document.getElementById('menu-btn');
-  const mobileMenu = document.getElementById('mobile-menu');
 
-  menuBtn?.addEventListener('click', () => {
-    mobileMenu?.classList.toggle('hidden');
-  });
 </script>
