--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -1,38 +1,36 @@
 ---
 import { Image } from 'astro:assets';
-import heroImage from '../../assets/paul_smith.png';
+import heroImage from '../../assets/foto-perfil.jpg';
 import { basic } from '../../config/cv.json';
 ---
 
 <section class="py-5 px-4 sm:py-10 lg:py-16">
     <div class="px-4 mx-auto max-w-7xl sm:px-6 lg:px-8">
         <div class="grid items-center grid-cols-1 gap-12 lg:grid-cols-2">
-            <div class="relative flex justify-center">
-                <Image class="w-full md:max-w-md lg:max-w-md"
-                    src={heroImage}
-                    alt="Astro Resume Theme - Paul Smith" />
-            </div>
             <div>
-                <p class="text-lg text-offset">
-                    {basic?.job}
-                </p>
 
                 <h1 class="text-2xl font-bold sm:text-4xl lg:text-5xl mt-3">
-                    {basic?.name}
+                    👋 Hola, soy {basic?.name}
                 </h1>
 
-                <p class="mt-5 text-base sm:text-xl">
+                <p class="mt-5 text-lg sm:text-xl">
                     {basic?.summary}
                 </p>
 
                 <div class="mt-10 sm:flex sm:items-center sm:space-x-8">
-                    <a href=`/cv/${basic?.cv_file_name}` title="Download CV" download
-                        class="inline-flex items-center justify-center px-10 py-4 text-base text-white
+                    <a href="https://drive.google.com/file/d/1-kgD2S2iOvxXova1qKWr9TcJhzZti2f3/view" target="_blank" title="Ver mi CV" download
+                        class="inline-flex items-center justify-center px-10 py-4 text-xl text-white
                             font-semibold transition-all duration-200 rounded
+                            w-full sm:w-64
                             bg-primary hover:bg-secondary focus:bg-secondary" role="button">
-                        Download CV
+                        Ver mi CV
                     </a>
                 </div>
+            </div>
+            <div class="relative flex justify-center">
+                <Image class="w-full md:max-w-md lg:max-w-md border border-default profile-img-border"
+                    src={heroImage}
+                    alt="" />
             </div>
         </div>
     </div>
