--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -3,6 +3,6 @@ import Layout from '../layouts/Layout.astro';
 import NotFound from '../components/sections/NotFound.astro';
 ---
 
-<Layout title="Page Not Found">
+<Layout title="Not Found">
 	<NotFound />
 </Layout>
