--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,8 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Hero from '../components/sections/Hero.astro';
-import Resume from '../components/sections/Resume.astro';
-import Portfolio from '../components/sections/Portfolio.astro';
 ---
 
-<Layout title="Astro Resume Theme">
+<Layout title="Matias Mendaro">
 	<Hero />
-	<Resume />
-	<Portfolio />
 </Layout>
